# samog-bot

./: Cargo.toml
src/: config.rs  error.rs  main.rs
src/commands/: inspector.rs
